# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.h  display.cpp  display.h  main.cpp
